# flySnailTool

./: .gitignore  CMakeLists.txt  README.en.md  README.md  clear_all.bat  clear_all.py  clear_bin.bat  clear_bin.py  flySnailTool.pro
cmake/: Macro.h.in  VersionInfo.rc.in  global_compile.cmake  plugin.cmake
src/: CMakeLists.txt  global_compile.pri  src.pro
src/libs/: CMakeLists.txt  libs.pro
src/libs/PluginManager/: CMakeLists.txt  CheckDelegate.h  LibraryPathSet.cpp  LibraryPathSet.h  Macro.h  PluginManage.cpp  PluginManage.h  PluginManager.pro  PluginSpec.cpp
src/libs/UiManager/: CMakeLists.txt  Macro.h  UiManager.pro  VersionInfo.rc
src/libs/UiManager/utils/: UiHelper.cpp  UiHelper.h
src/main/: CMakeLists.txt  Macro.h  VersionInfo.rc  main.cpp  main.pro
src/plugin/: CMakeLists.txt  Plugin.h  plugin.pro
src/plugin/Core/: CMakeLists.txt  Core.pro  Macro.h  Plugin.cpp  VersionInfo.rc
src/plugin/Core/Application/: Application.cpp  Application.h  Application.pri  CMakeLists.txt
src/plugin/Core/PluginManager/: CMakeLists.txt  CheckDelegate.cpp  EasyTempLibrarySearchPath.cpp  EasyTempLibrarySearchPath.h  ManageForm.cpp  ManageForm.h  PluginManage.cpp  PluginManage.h  PluginSpec.cpp  PluginSpec.h
src/plugin/Core/ui/: MainWindow.cpp  MainWindow.h  MainWindow.ui
src/plugin/Global/: Global.h  Global.pri
src/plugin/QtDemo/: CMakeLists.txt  Form.cpp  Form.h  Form.ui  IconListDemo.cpp  IconListDemo.h  IconListDemo.ui  Macro.h  Plugin.cpp  QtDemo.pro  VersionInfo.rc  res.qrc
src/plugin/QtDemo/BuildIn/: IconListDemo.cpp  IconListDemo.h
src/plugin/QtDemo/Thread/: DataCaculator.cpp  DataCaculator.h  DataCalculatoRunnable.cpp  DataCalculatoRunnable.h  DataCalculatorThread.cpp  DataCalculatorThread.h  ThreadDemo.cpp  ThreadDemo.h  ThreadDemo.ui
